RESULTS/AutoSpec/raw_results/out-4o-nla/19_0001/19_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/19_0001/19_merged.c:14:63: error: unterminated comment
   14 |     loop invariant x == \sum_{i=1}^{c} i^5; /* using sum of powers */;
      |                                                               ^
